# dvc_sam_train

./: .dockerignore  .dvcignore  .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yaml  dvc.yaml  entrypoint.sh  inference_eval.py  inference_plots.py  mask_gen.py  params.yaml  pyproject.toml  train.py
.dvc/: config  config_example.local
dataset/: data.dvc
src/: dataloader.py  evaluate.py  infer.py  lora.py  mask_gen.py  processor.py  split.py  test.py  train.py  utils.py
src/core/: config.py  utils.py
src/segment_anything/: predictor.py
